--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,7 @@
     <a href="aboutme.html">About Me</a>
     <font color="orange"> <h1>This Is All About Me!</h1>
     </a>
-<img src="images/capture.PNG" height="300">
+<img src="DUNLEA/Images/capture.PNG" height="300">
  <font size="5"> <h1>I like to have fun with photoshop
 <div>
 <img src="picofme.PNG" height="500">
