--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
   </body>
 </html>
     <center>
- <img src="images/giphy.gif" height="500">
+ <img src="dunlea/giphy.gif" height="500">
 <div/>
- <img src="images/dunleawithgirls.PNG" height="300">
+ <img src="dunlea/images/dunleawithgirls.PNG" height="300">
  <font size="3"> <h1>                                               Mr. Dunlea, The Best Teacher!
