--- a/aboutme.html
+++ b/aboutme.html
@@ -14,7 +14,7 @@
 <img src="DUNLEA/Images/capture.PNG" height="300">
  <font size="5"> <h1>I like to have fun with photoshop
 <div>
-<img src="picofme.PNG" height="500">
+<img src="Images/picofme.PNG" height="500">
 <div>
 <font size="8"> A picture of me
 <div>
