--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 
-<head><title>About Me Page</title>
+<head><title>Home Page</title>
 <style>
     body {
         background: radial-gradient(circle, #187bcd 0%, #1167b1 70%, #03254c 100%);
@@ -263,12 +263,12 @@
 <max-height:100px; overflow:auto>
 </head>
 <audio controls>
-  <source src="images/redknight.mp3" type="audio/mp3">
+  <source src="Images/redknight.mp3" type="audio/mp3">
 </audio>
   </body>
 </html>
     <center>
- <img src="dunlea/giphy.gif" height="500">
+ <img src="Images/giphy.gif" height="500">
 <div/>
- <img src="dunlea/images/dunleawithgirls.PNG" height="300">
+ <img src="Images/dunleawithgirls.PNG" height="300">
  <font size="3"> <h1>                                               Mr. Dunlea, The Best Teacher!
