--- a/portfolio.html
+++ b/portfolio.html
@@ -12,3 +12,5 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <h1>This is my Portfolio Page!</h1>
+<img src="Images/Game.PNG" height="500">
+	A game I made with code!
