--- a/portfolio.html
+++ b/portfolio.html
@@ -12,5 +12,7 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <h1>This is my Portfolio Page!</h1>
+<font size="10">
 <img src="Images/Game.PNG" height="500">
+<div/>
 	A game I made with code!
