--- a/portfolio.html
+++ b/portfolio.html
@@ -14,5 +14,5 @@
     <h1>This is my Portfolio Page!</h1>
 <font size="10">
 <img src="Images/Game.PNG" height="500">
-<div/>
+<div>
 	A game I made with code!
