--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <h1>This is my Portfolio Page!</h1>
-<font size="10">
+<font size="3">
 <img src="Images/Game.PNG" height="500">
 <div>
-	A game I made with code!
+A game I made with code! It was for a project for chapter 1 of PLTW. There are a lot of things in it like images that I have imported and I was able to make them move. Theres also while loops, which helps reduce the amount of code and opens a new set of code ideas. Also, giving the spacebar a function and the code to kill the monsters was very easy and fun to do. This assignment was almost as fun as the game!
