--- a/portfolio.html
+++ b/portfolio.html
@@ -15,4 +15,8 @@
 <font size="3">
 <img src="Images/Game.PNG" height="500">
 <div>
-A game I made with code! It was for a project for chapter 1 of PLTW. In the game, you shoot the monsters using teh spacebar and you lose if they reach your castle. There are a lot of things in it like images that I have imported and I was able to make them move. Theres also while loops, which helps reduce the amount of code and opens a new set of code ideas. Also, giving the spacebar a function and the code to kill the monsters was very easy and fun to do. This assignment was almost as fun as the game!
+		A game I made with code! The name is called "Protect the Castle". It was for a project for chapter 1 of PLTW. In the game, you shoot the monsters using the spacebar and you lose if they reach your castle.
+	<div>
+		There are a lot of things in it like images that I have imported and I was able to make them move. Theres also while loops, which helps reduce the amount of code and opens a new set of code ideas.
+		<div>
+		Also, giving the spacebar a function and the code to kill the monsters was very easy and fun to do. This assignment was almost as fun as the game!
