--- a/portfolio.html
+++ b/portfolio.html
@@ -20,3 +20,14 @@
 		There are a lot of things in it like images that I have imported and I was able to make them move. Theres also while loops, which helps reduce the amount of code and opens a new set of code ideas.
 		<div>
 		Also, giving the spacebar a function and the code to kill the monsters was very easy and fun to do. This assignment was almost as fun as the game!
+
+<img src="Images/Game2.PNG" height="500">
+<div>
+		Another game that was made. This game was inspired by the VERY famous Bubble Trouble. This was for teh chapter two project of PLTW. In this game, it is actually multiplayer.
+	<div>
+	There are two people and the can both move and shoot. There is also a ball which moves with physics and math. If the ball is hit,it respawns elsewhere.
+		<div>
+	If the ball hits a player, the player dies. The game is over when both players die and if their score is great enough, the will end up on the leaderboard.
+			
+			
+			
