--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,7 @@
 		There are a lot of things in it like images that I have imported and I was able to make them move. Theres also while loops, which helps reduce the amount of code and opens a new set of code ideas.
 		<div>
 		Also, giving the spacebar a function and the code to kill the monsters was very easy and fun to do. This assignment was almost as fun as the game!
+<div>
 
 <img src="Images/Game2.PNG" height="500">
 <div>
