--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,10 @@
 		<div>
 		Also, giving the spacebar a function and the code to kill the monsters was very easy and fun to do. This assignment was almost as fun as the game!
 <div>
-
+<div>
+	<div>
+		<div>
+			<div>
 <img src="Images/Game2.PNG" height="500">
 <div>
 		Another game that was made. This game was inspired by the VERY famous Bubble Trouble. This was for teh chapter two project of PLTW. In this game, it is actually multiplayer.
