--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
 			<div>
 <img src="Images/Game2.PNG" height="500">
 <div>
-		Another game that was made. This game was inspired by the VERY famous Bubble Trouble.
+		Another game that was made for a PLTW chapter 2 project. This game was inspired by the VERY famous Bubble Trouble.
 	<div>
 		This was for the chapter two project of PLTW. In this game, it is actually multiplayer.
 	<div>
@@ -40,6 +40,22 @@
 	If the ball is hit,it respawns elsewhere. If the ball hits a player, the player dies.
 			<div>
 	The game is over when both players die and if their score is great enough, the will end up on the leaderboard.
-			
-			
-			
+<div>
+<br>
+<div>
+<br>
+			<div>
+<img src="Images/towerdefense.PNG" height="500">
+<div>				
+
+	This game was made for a scratch project and it is based of the pre-existing game Bloons Tower Defense.
+<div>
+	Scratch was easy to code some parts, but other parts of the game got a bit more complicated because of scratch's limited options.
+<div>
+	To play the game, you drag out the defender, Andie, to the grass and he will start attacking the evil minions.
+<div>
+	Andie costs $500 to place down and when he hits an evil minion, your score increases and the minion loses a life.
+<div>
+	When a minion dies, you gain a little money. Also, the minions gain more lives as the game goes on and it gets harder.
+<div>
+	When the minion reaches the end of the path, the game is over and you lose.
