--- a/portfolio.html
+++ b/portfolio.html
@@ -59,3 +59,17 @@
 	When a minion dies, you gain a little money. Also, the minions gain more lives as the game goes on and it gets harder.
 <div>
 	When the minion reaches the end of the path, the game is over and you lose.
+	
+<br>
+<img src="Images/graphs.PNG" height="500">
+<img src="Images/forest.jpg" height="500">
+	<div>
+	The next project, predicting/guessing which graph was which enviroment. This project was very diffuicult because they didnt give which line meant what.
+	<div>
+	It took a lot of trials and reading the data, but eventually, after a long time, I came to a conclusion.
+	<div>
+	I finally decided that it was the inland forest because the data matched with it more than any other region.
+	<div>
+	Two regions that were highly considered were the marshlands and the rocky mountain, but they were just a little off.
+	<div>
+	Making graphs of the data helped because I compared them with the graph given and it made choosing a region a lot easier.
