--- a/portfolio.html
+++ b/portfolio.html
@@ -61,10 +61,11 @@
 	When the minion reaches the end of the path, the game is over and you lose.
 	
 <br>
-<img src="Images/graphs.PNG" height="500">
+<img src="Images/graphs.PNG" height="700">
+<div>
 <img src="Images/forest.jpg" height="500">
 	<div>
-	The next project, predicting/guessing which graph was which enviroment. This project was very diffuicult because they didnt give which line meant what.
+	The next project, predicting/guessing which graph was which enviroment. This project was diffuicult because they didnt specify the data.
 	<div>
 	It took a lot of trials and reading the data, but eventually, after a long time, I came to a conclusion.
 	<div>
