--- a/portfolio.html
+++ b/portfolio.html
@@ -74,3 +74,14 @@
 	Two regions that were highly considered were the marshlands and the rocky mountain, but they were just a little off.
 	<div>
 	Making graphs of the data helped because I compared them with the graph given and it made choosing a region a lot easier.
+<div>
+<img src="Images/graphicpic.PNG" height="500">
+	<div>
+	In this project, we took data from a government website about honey and honey production. The data was for all the states in the US.
+	<div>
+	We graphed the data using code and we saw which state had the most data and we grouped the states on how much data they produced.
+	<div>
+	The data was also turned into a bar graph, which let us see teh data from a different perspective, by the years.
+	<div>
+	We also found the mean, or the average, of the amount of honey produced by each state. 
+
