--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@
 	<div>
 	Making graphs of the data helped because I compared them with the graph given and it made choosing a region a lot easier.
 <div>
-<img src="Images/graphicpic.PNG" height="500">
+<img src="Images/graphpic.PNG" height="500">
 	<div>
 	In this project, we took data from a government website about honey and honey production. The data was for all the states in the US.
 	<div>
