--- a/portfolio.html
+++ b/portfolio.html
@@ -84,6 +84,13 @@
 	The data was also turned into a bar graph, which let us see teh data from a different perspective, by the years.
 	<div>
 	We also found the mean, or the average, of the amount of honey produced by each state. 
-
 <div>
-	<iframe frameborder="0" width="100%" height="500px" src="">https://replit.com/@DanielJabro/JovialUntriedBotany/demo-embed?embed=true</iframe>
+<img src="Images/economy.PNG" height="500">
+	<div>
+	In this project, we began looking at real-life-based simulations. One that my partner and I chose was called simple economy.
+	<div>
+	We looked through the simulation and it's data, played with it for a while, and even glanced at the code a little.
+	<div>
+	After messing with the options, we answered some questions and inserted some picures of the simulation.
+	<div>
+	We concluded that the simulation was a little similar to real life, but missed some qualities. 
